--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc\:mysql\://localhost\:3306/oasubject?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc\:mysql\://localhost\:3306/oasuject?useUnicode=true&amp;characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=root
