--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ server.port=8088
 ##spring.view.suffix=.jsp
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+#server.jsp-servlet.init-parameters.development=true
+#\u8FBE\u5230\u6A21\u677F\u70ED\u90E8\u7F72
+#Thymeleaf\u7684\u914D\u7F6E\uFF1A
+#spring.thymeleaf.cache=false
 ##tomcat##
 ##server.tomcat.uri-encoding=UTF-8
 ##Druid##
