--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+
 			<!-- <plugin> <groupId>org.mybatis.generator</groupId> <artifactId>mybatis-generator-maven-plugin</artifactId> 
 				<version>1.3.2</version> <configuration> <configurationFile>${basedir}/src/main/resources/generatorConfig.xml</configurationFile> 
 				<overwrite>true</overwrite> <verbose>true</verbose> </configuration> </plugin> -->
@@ -42,7 +44,7 @@
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
-			<version>7.0.54</version>
+			<version>8.5.14</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -95,11 +97,33 @@
 			<version>1.5.6</version>
 		</dependency>
 		<!-- spring热部署 -->
-        <dependency>
-		    <groupId>org.springframework.boot</groupId>
-			 <artifactId>spring-boot-devtools</artifactId>
-			 <optional>true</optional> <!-- 这个需要为 true 热部署才有效 -->
-	   </dependency>
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional> <!-- 这个需要为 true 热部署才有效 -->
+		</dependency>
+
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>1.5.3.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+			<version>1.5.2.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 </project>
