--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,32 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!--热部署依赖包 -->
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<dependencies>
+					<!-- spring热部署 -->
+					<dependency>
+						<groupId>org.springframework</groupId>
+						<artifactId>springloaded</artifactId>
+						<version>1.2.6.RELEASE</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<mainClass>cn.springboot.Mainspringboot</mainClass>
+				</configuration>
+			</plugin>
 			<!-- <plugin> <groupId>org.mybatis.generator</groupId> <artifactId>mybatis-generator-maven-plugin</artifactId> 
 				<version>1.3.2</version> <configuration> <configurationFile>${basedir}/src/main/resources/generatorConfig.xml</configurationFile> 
 				<overwrite>true</overwrite> <verbose>true</verbose> </configuration> </plugin> -->
 		</plugins>
 	</build>
 	<dependencies>
+		<!-- spring热部署 -->
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-devtools</artifactId> 
+			<optional>true</optional> 这个需要为 true 热部署才有效 </dependency> -->
+
 		<!-- 3.2、导入spring boot的web支持 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -42,7 +62,7 @@
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
-			<version>7.0.54</version>
+			<version>8.5.14</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -94,6 +114,19 @@
 			<artifactId>slf4j-jdk14</artifactId>
 			<version>1.5.6</version>
 		</dependency>
-
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.1.26</version>
+		</dependency>
 	</dependencies>
 </project>
